[package]
name = "arigato"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://github.com/paultag/arigato"
description = "barebones Rust framework for creating and serving a 9p filesystem"

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "tracing", "sync", "net", "rt"] }
tracing = "0"
